--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-  <form class="authForm" action="/auth/login" method="post">
-    <legend>Log In</legend>
+  <form class="authForm" action="/auth/signup" method="post">
+    <legend>Sign Up</legend>
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required>
     <br>
@@ -23,8 +23,8 @@
   </form>
 
   <p class="signup">
-    Don't have an account yet?
-    <a class="signupLink" href="/auth/signup">Go here to make one</a>
+    Already have an account?
+    <a class="signupLink" href="/auth/login">Log In</a>
   </p>
 </body>
 
