--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,7 +19,7 @@
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
     <br>
-    <button type="submit">Login</button>
+    <button type="submit">Sign Up</button>
   </form>
 
   <p class="signup">
